@@ -1,3 +1,14 @@
 <div id="header" align="center">
   <h1>Quick start</h1>
 </div>
+
+1. Download .rar file
+2. Extract it to your working directory
+3. Run .jar file
+4. Enjoy :)
+
+- you must have Java version 21 and older installed
+
+- you must have <a href="https://jdk.java.net/javafx21/">javafx-sdk-21.0.2</a>
+
+- run command: ```java --module-path path\to\javafx-sdk-21\lib --add-modules javafx.controls,javafx.fxml -jar your-application.jar```
